parslers-benchmark/src/tests/invalid/syntaxErr/expressions/missingOperand1.wacc
# operator missing first operand

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int b = * 6
end
